[package]
name = "ln-utils-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
hex = "0.4.3"
lightning-probing = "0.1.2"
lnd_grpc_rust = "2.3.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = {version = "1.33.0", features = ["full"]}
